# services/validateSchema.js
@@ -3,7 +3,11 @@ const Joi = require("joi");
 const accountValidate = Joi.object({
     username: Joi.string().min(3).max(30).required(),
     password: Joi.string().min(3).max(30).required(),
-    // access_token: [Joi.string(), Joi.number()],
-    // refresh_token: [Joi.string(), Joi.number()],
+    role: Joi.string().min(3).max(30).required(),
 });
-module.exports = accountValidate;
+const changePassSchema = Joi.object({
+    username: Joi.string().min(3).max(30).required(),
+    oldPassword: Joi.string().min(3).max(30).required(),
+    newPassword: Joi.string().min(3).max(30).required(),
+});
+module.exports = { accountValidate, changePassSchema };
